cabal-version:      3.4
name:               sth-jit
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Andreas Klebinger
maintainer:         klebinger.andreas@gmx.at
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall
    build-depends:
        ghc,
        ghc-paths

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.0.0,
        ghc,
        vector,
        containers,
        ghc-paths

    hs-source-dirs:   lib
    default-language: GHC2021

executable sth-jit
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.0.0,
        sth-jit,
        ghc,
        vector,
        containers,
        ghc-paths

    hs-source-dirs:   exe
    default-language: GHC2021

test-suite sth-jit-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.0.0,
        sth-jit
